Test with --sun-misc-unsafe-memory-access=deny