@@ -14,3 +14,13 @@ dependencies {
   testImplementation("org.junit.jupiter:junit-jupiter-params")
   testImplementation("org.testcontainers:junit-jupiter")
 }
+
+tasks {
+  withType<Test>().configureEach {
+    val denyUnsafe = gradle.startParameter.projectProperties.get("denyUnsafe")?.toBoolean() ?: false
+    if (denyUnsafe) {
+      // These tests use Armeria which uses Unsafe via JCTools
+      jvmArgs("--sun-misc-unsafe-memory-access=allow")
+    }
+  }
+}
